--- a/css_friends/cats.html
+++ b/css_friends/cats.html
@@ -46,6 +46,25 @@
 
     <section class="content-sidebar">
 
+      <a href="#" class="profile-picture">
+        <strong class="online">Online</strong>
+        <img src="./images/cat.jpg" alt="">
+      </a>
+
+      <div class="profile-info">
+          <h2>Sennacy</h2>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+        </p>
+      </div>
+
+      <ul class="profile-nav">
+        <li><a href="#">Wall</a></li>
+        <li><a href="#">About</a></li>
+        <li><a href="#">Friends</a></li>
+        <li><a href="#">Photos</a></li>
+      </ul>
+
     </section>
     <section class="content-main">
 
