--- a/css_friends/cats.html
+++ b/css_friends/cats.html
@@ -59,10 +59,10 @@
       </div>
 
       <ul class="profile-nav">
-        <li><a href="#">Wall</a></li>
-        <li><a href="#">About</a></li>
-        <li><a href="#">Friends</a></li>
-        <li><a href="#">Photos</a></li>
+        <li><a href="#"><i class="icon-small-wall"></i>Wall</a></li>
+        <li><a href="#"><i class="icon-small-about"></i>About</a></li>
+        <li><a href="#"><i class="icon-small-friends"></i>Friends</a></li>
+        <li><a href="#"><i class="icon-small-photos"></i>Photos</a></li>
       </ul>
 
     </section>
