completion of phase2: thumbs

--- a/css_friends/cats.html
+++ b/css_friends/cats.html
@@ -52,9 +52,9 @@
       </a>
 
       <div class="profile-info">
-          <h2>Sennacy</h2>
+          <h2>Specific Cat</h2>
         <p>
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+          All the information about the cat.
         </p>
       </div>
 
@@ -63,6 +63,36 @@
         <li><a href="#"><i class="icon-small-about"></i>About</a></li>
         <li><a href="#"><i class="icon-small-friends"></i>Friends</a></li>
         <li><a href="#"><i class="icon-small-photos"></i>Photos</a></li>
+      </ul>
+
+      <ul class="profile-friends">
+        <li><a href="#" class="thumb" title="Mohammad">
+          <img src="./images/cat.jpg" alt="">
+        </a></li>
+        <li><a href="#" class="thumb" title="Jonathan">
+          <img src="./images/cat.jpg" alt="">
+        </a></li>
+        <li><a href="#" class="thumb" title="Victor">
+          <img src="./images/cat.jpg" alt="">
+        </a></li>
+        <li><a href="#" class="thumb" title="Freddy">
+          <img src="./images/cat.jpg" alt="">
+        </a></li>
+        <li><a href="#" class="thumb" title="Amin">
+          <img src="./images/cat.jpg" alt="">
+        </a></li>
+        <li><a href="#" class="thumb" title="Kyle">
+          <img src="./images/cat.jpg" alt="">
+        </a></li>
+        <li><a href="#" class="thumb" title="STEVE">
+          <img src="./images/cat.jpg" alt="">
+        </a></li>
+        <li><a href="#" class="thumb" title="Hassan">
+          <img src="./images/cat.jpg" alt="">
+        </a></li>
+        <li><a href="#" class="thumb" title="Rizzy">
+          <img src="./images/cat.jpg" alt="">
+        </a></li>
       </ul>
 
     </section>
