added form to css_friends

--- a/css_friends/cats.html
+++ b/css_friends/cats.html
@@ -11,6 +11,11 @@
   <link rel="stylesheet" href="css/04-footer.css" type="text/css">
   <link rel="stylesheet" href="css/05-cats.css" type="text/css">
   <link rel="stylesheet" href="css/06-sidebar.css" type="text/css">
+  <link rel="stylesheet" href="css/07-online.css" type="text/css">
+  <link rel="stylesheet" href="css/08-thumbs.css" type="text/css">
+  <link rel="stylesheet" href="css/09-forms.css" type="text/css">
+  <link rel="stylesheet" href="css/10-posts.css" type="text/css">
+  <link rel="stylesheet" href="css/11-icons.css" type="text/css">
 </head>
 <body>
 
@@ -97,6 +102,31 @@
 
     </section>
     <section class="content-main">
+
+      <form class="form">
+
+        <a href="#" class="form-thumb thumb" title="Cat">
+          <img src="./images/cat.jpg" alt="">
+        </a>
+
+        <fieldset class="form-fieldset">
+          <div class="input">
+            <label for="form-title">Post Title</label>
+            <input id="form-title" type="text" value="CatInfo">
+          </div>
+
+          <div class="input">
+            <label for="form-textarea">Post Body</label>
+            <textarea id="form-textarea">All informationregarding the cat goes here.</textarea>
+          </div>
+
+          <div class="submit">
+            <button>Post To Wall</button>
+            <span class="button-alternative">or <strong>Cancel</strong></span>
+          </div>
+
+        </fieldset>
+      </form>
 
     </section>
   </main>
